@@ -400,7 +400,7 @@
     <game>
 	<type>SAS_SERVER</type>
 	<name>Savage</name>
-	<flags>GAME_CONNECT | GAME_PASSWORD</flags>
+	<flags>GAME_CONNECT | GAME_PASSWORD | GAME_ADMIN</flags>
 	<default_port>11235</default_port>
 	<id>SAS</id>
 	<qstat_str>SAS</qstat_str>
